# Torwell

./: .env.example  .gitignore  README.md  SUMMARY.md  Taskfile.yml  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.js.timestamp-1763689729651-eb493ad272b51.mjs  vitest.snapshot.config.ts
.devcontainer/: devcontainer.json  post-create.sh
.devcontainer/nvim/: init.lua
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: builddesktop.yml  ci.yml  mobile.yml  release.yml
cf worker/: Basic-HTTPS-Proxy-CF-Worker.txt  README.md  Super-HTTPS-Proxy-CF-Worker-.txt
docs/: CONTRIBUTING.md  CertificateManagement.md  Changelog.md  DOCUMENTATION.md  ExistingTests.md  FILEANDWIREMAP.md  GeoIPDatabase.md  GlassUI.md  HSM.md  Limitations.md  Mobile.md  NextSteps.md  PenTestPlan.md  ProductionCertificate.md  ProductionDeployment.md  ReleaseNotes.md  SecurityAuditPlan.md  SecurityFindings.md  TODO123.md  TROUBLESHOOTING.md  Todo-fuer-User.md  context.md  plan.md  spec.md  todo-001-backend-build.md  todo-002-dependencies.md  todo-003-tauri-config.md  todo-004-system-deps.md  todo-005-webgpu-analysis.md  todo-006-arti-network.md  todo-007-improvements.md  todo-01-optimization.md  todo-02-system-proxy.md  todo-03-ui-wiring.md  todo-04-ui-redesign.md  todo.md
docs/archive/: CR-0001.md
docs/examples/: app_config.json  cert_config.json
docs/todo/: CR-0001.md  CR-0002.md
mobile/: capacitor.config.ts  package.json
mobile/scripts/: build_android.sh  build_ios.sh  test_artifacts.sh
scripts/: backup_ui.sh  build_release.sh  import_workers.ts  import_workers_cli.ts  install_service.sh  setup_env.sh  test_service_install.sh  update_changelog.sh
scripts/__tests__/: import_workers.spec.ts  import_workers_cli.spec.ts
scripts/benchmarks/: README.md  connection_startup.sh  measure_frontend_build.sh  measure_rust_check.sh  playwright-perf.config.ts  run_all.sh  run_frontend_benchmarks.sh  run_heaptrack.sh  run_massif.sh  run_simd_filters.sh
scripts/tests/: check_tls.js  coverage.sh  fuzz.sh  headless_renderer.sh  run_all.sh  run_concurrency.sh
scripts/utils/: bootstrap.sh  dev_run.sh  run_task.sh
src/: app.css  app.html  setupTests.ts
src-tauri/: Cargo.toml  app_config.json  tauri.conf.json  torwell84.service
src-tauri/benches/: bootstrap.rs  pixel_filters.rs
src-tauri/certs/: cert_config.json  server.pem
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: bridge_presets.rs  secure_http_headers.rs
src-tauri/icons/: icon.icns
src-tauri/shaders/: fullscreen.wgsl
src-tauri/src/: commands.rs  error.rs  http_bridge.rs  icmp.rs  lib.rs  main.rs  secure_http.rs  secure_store.rs  session.rs  socks.rs  state.rs  system_proxy.rs  tor_manager.rs  traffic.rs
src-tauri/src/core/: executor.rs
src-tauri/src/lib/simd/: mod.rs  neon.rs  scalar.rs  x86.rs
src-tauri/src/lib/simd/snapshots/: simd__mod__tests__snapshot_pipeline_roundtrip.snap
src-tauri/src/renderer/: cache.rs  metrics.rs  mod.rs  worker.rs
src-tauri/src/tests/: test_system_proxy.rs
src-tauri/tests/: cert_rotation_tests.rs  commands_tests.rs  fuzz_commands.rs  hsm_init_tests.rs  hsm_tls_config_tests.rs  http_bridge_tests.rs  pentest.rs  renderer_tests.rs  secure_http_tests.rs  session_tests.rs  state_tests.rs  tor_manager_metrics_tests.rs  tor_manager_tests.rs  worker_token_tests.rs
src-tauri/tests_data/: new_cert.pem
src/__tests__/: ActionCard.spec.ts  CircuitManager.spec.ts  ErrorBoundary.spec.ts  ErrorBoundaryTest.svelte  ErrorBoundaryWrapper.svelte  FaultyComponent.svelte  FocusTrap.spec.ts  IdlePanel.spec.ts  LogLimit.e2e.spec.ts  MetricsChart.spec.ts  NetworkMonitor.spec.ts  NetworkTools.spec.ts  PageFlow.e2e.spec.ts  ResourceDashboard.spec.ts  SecurityBanner.spec.ts  SettingsModal.e2e.spec.ts  StatusCard.spec.ts  ThrowError.svelte  TorChain.spec.ts  TorStore.spec.ts  WorkerToken.spec.ts  apiCache.spec.ts  cacheLayer.spec.ts  connectionQueue.spec.ts  countries.spec.ts  database.spec.ts
src/cache/: adaptiveCache.ts  index.ts  metricSeries.ts  types.ts
src/lib/: api.ts  bridge_presets.json  database.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/types/: svelte-error-boundary.d.ts
verification/: verify_settings.py  verify_ui.py
(+52 files in other folders)
