[package]
name = "torwell84"
version = "2.0.0"
description = "Torwell84 V2 - A modern, secure Tor network management application"
authors = ["Kilo Code"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
futures = "0.3"
tauri = { version = "1.6.0", features = [] }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
arti-client = { version = "0.31.0", features = ["tokio", "rpc", "full", "experimental-api", "geoip"] }
tor-rtcompat = { version = "0.31.0" }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tor-circmgr = "0.31.0"
tor-dirmgr = "0.31.0"
tor-netdir = "0.31.0"
tor-proto = "0.31.0"
tor-linkspec = "0.31.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "json"] }
rustls = "0.23"
rustls-pemfile = "2"
anyhow = "1"
sysinfo = "0.30"

[dev-dependencies]
async-trait = "0.1"
once_cell = "1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
